<resources>
    <string name="app_name">Boppin\' It</string>
    <string name="start_menu">Start Menu</string>
    <string name="settings">Settings</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="play">PLAY</string>
    <string name="solo">Solo</string>
    <string name="coop">Co-op</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="default_web_client_id">793079572572-um9hha2j6skkolsgh9f0gl58nhbsa7fc.apps.googleusercontent.com</string>
</resources>